datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model User {
  id            String         @id @default(cuid())
  email         String         @unique
  password      String
  firstname     String
  lastname      String?
  messages      Message[]
  conversations Conversation[]
  createdAt     DateTime       @default(now())
  updatedAt     DateTime       @updatedAt
}

model Conversation {
  id           String    @id @default(cuid())
  title        String?
  messages     Message[]
  participants User[]
  creatorId    String
  createdAt    DateTime  @default(now())
  updatedAt    DateTime  @updatedAt
}

model Message {
  id             String        @id @default(cuid())
  content        String
  contentHistory String[]
  type           MessageType   @default(REGULAR)
  isDeleted      Boolean       @default(false)
  from           User          @relation(fields: [fromId], references: [id])
  fromId         String
  conversation   Conversation? @relation(fields: [conversationId], references: [id])
  conversationId String?
  createdAt      DateTime      @default(now())
  updatedAt      DateTime      @updatedAt
}

// Stripped down version of Message model for
// new "anonymous" chat feature
//
// Actually, not so anonymous, rather it is just regular chat
// with dynamic assignment of usernames on enter
model AnonymousMessage {
  id        String      @id @default(cuid())
  content   String
  type      MessageType @default(REGULAR)
  fromId    String
  createdAt DateTime    @default(now())
}

enum MessageType {
  REGULAR
  LATEX
}
