//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  email String [unique, not null]
  password String [not null]
  firstname String [not null]
  lastname String
  messages Message [not null]
  conversations Conversation [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Conversation {
  id String [pk]
  title String
  messages Message [not null]
  participants User [not null]
  creatorId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Message {
  id String [pk]
  content String [not null]
  contentHistory String[] [not null]
  type MessageType [not null, default: 'REGULAR']
  isDeleted Boolean [not null, default: false]
  from User [not null]
  fromId String [not null]
  conversation Conversation
  conversationId String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table AnonymousMessage {
  id String [pk]
  content String [not null]
  type MessageType [not null, default: 'REGULAR']
  fromId String [not null]
  createdAt DateTime [default: `now()`, not null]
}

Table ConversationToUser {
  conversationsId String [ref: > Conversation.id]
  participantsId String [ref: > User.id]
}

Enum MessageType {
  REGULAR
  LATEX
}

Ref: Message.fromId > User.id

Ref: Message.conversationId > Conversation.id